Bug 677371 - [jsdbg2] Assertion failure: throwing, at jscntxt.h:1274. r=jimb